# 10.2

./: CMakeLists.txt
ht_10.2/: ht_10.2.vcxproj
ht_10.2/Debug/: vc143.idb
ht_10.2/Debug/ht_10.2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ht_10.2.lastbuildstate
